reference/5.1/Microsoft.PowerShell.Management/Copy-ItemProperty.md
---
external help file: Microsoft.PowerShell.Commands.Management.dll-Help.xml
keywords: powershell, cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Management
ms.date: 10/18/2018
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.management/copy-itemproperty?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Copy-ItemProperty
ms.openlocfilehash: 7af5a414a84bad8048c997803c94c0d94e549989
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: pt-BR
ms.lasthandoff: 07/07/2020
ms.locfileid: "93194201"
---
# <span data-ttu-id="77422-103">Copy-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="77422-103">Copy-ItemProperty</span></span>

## <span data-ttu-id="77422-104">SINOPSE</span><span class="sxs-lookup"><span data-stu-id="77422-104">SYNOPSIS</span></span>

<span data-ttu-id="77422-105">Copia uma propriedade e o valor de um local especificado para outro local.</span><span class="sxs-lookup"><span data-stu-id="77422-105">Copies a property and value from a specified location to another location.</span></span>

## <span data-ttu-id="77422-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="77422-106">SYNTAX</span></span>

### <span data-ttu-id="77422-107">Caminho (padrão)</span><span class="sxs-lookup"><span data-stu-id="77422-107">Path (Default)</span></span>

```
Copy-ItemProperty [-Path] <String[]> [-Name] <String> [-Destination] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

### <span data-ttu-id="77422-108">LiteralPath</span><span class="sxs-lookup"><span data-stu-id="77422-108">LiteralPath</span></span>

```
Copy-ItemProperty -LiteralPath <String[]> [-Name] <String> [-Destination] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

## <span data-ttu-id="77422-109">DESCRIPTION</span><span class="sxs-lookup"><span data-stu-id="77422-109">DESCRIPTION</span></span>

<span data-ttu-id="77422-110">O `Copy-ItemProperty` cmdlet copia uma propriedade e um valor de um local especificado para outro local.</span><span class="sxs-lookup"><span data-stu-id="77422-110">The `Copy-ItemProperty` cmdlet copies a property and value from a specified location to another location.</span></span>
<span data-ttu-id="77422-111">Por exemplo, você pode usar este cmdlet para copiar uma ou mais entradas de registro de uma chave do registro para outra chave do registro.</span><span class="sxs-lookup"><span data-stu-id="77422-111">For instance, you can use this cmdlet to copy one or more registry entries from one registry key to another registry key.</span></span>

## <span data-ttu-id="77422-112">EXEMPLOS</span><span class="sxs-lookup"><span data-stu-id="77422-112">EXAMPLES</span></span>

### <span data-ttu-id="77422-113">Exemplo 1: copiar uma propriedade de uma chave do registro para outra chave do registro</span><span class="sxs-lookup"><span data-stu-id="77422-113">Example 1: Copy a property from a registry key to another registry key</span></span>

<span data-ttu-id="77422-114">Esse comando copia a propriedade denominada "MyProperty" da chave do registro "MyApplication" para a chave do registro "MyApplicationRev2".</span><span class="sxs-lookup"><span data-stu-id="77422-114">This command copies the property named "MyProperty" from the "MyApplication" registry key to the "MyApplicationRev2" registry key.</span></span>

```powershell
Copy-ItemProperty -Path "MyApplication" -Destination "HKLM:\Software\MyApplicationRev2" -Name "MyProperty"
```

## <span data-ttu-id="77422-115">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="77422-115">PARAMETERS</span></span>

### <span data-ttu-id="77422-116">-Credential</span><span class="sxs-lookup"><span data-stu-id="77422-116">-Credential</span></span>

<span data-ttu-id="77422-117">Especifica uma conta de usuário que tem permissão para executar esta ação.</span><span class="sxs-lookup"><span data-stu-id="77422-117">Specifies a user account that has permission to perform this action.</span></span>
<span data-ttu-id="77422-118">O padrão é o usuário atual.</span><span class="sxs-lookup"><span data-stu-id="77422-118">The default is the current user.</span></span>

<span data-ttu-id="77422-119">Digite um nome de usuário, como "User01" ou "Domínio01 \ Usuário01", ou insira um objeto **PSCredential** , como um gerado pelo `Get-Credential` cmdlet.</span><span class="sxs-lookup"><span data-stu-id="77422-119">Type a user name, such as "User01" or "Domain01\User01", or enter a **PSCredential** object, such as one generated by the `Get-Credential` cmdlet.</span></span>
<span data-ttu-id="77422-120">Se você digitar um nome de usuário, uma senha será solicitada.</span><span class="sxs-lookup"><span data-stu-id="77422-120">If you type a user name, you are prompted for a password.</span></span>

> [!WARNING]
> <span data-ttu-id="77422-121">Nenhum provedor instalado com o Windows PowerShell dá suporte a esse parâmetro.</span><span class="sxs-lookup"><span data-stu-id="77422-121">This parameter is not supported by any providers installed with Windows PowerShell.</span></span>

```yaml
Type: System.Management.Automation.PSCredential
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: Current user
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="77422-122">-Destino</span><span class="sxs-lookup"><span data-stu-id="77422-122">-Destination</span></span>

<span data-ttu-id="77422-123">Especifica o caminho para o local de destino.</span><span class="sxs-lookup"><span data-stu-id="77422-123">Specifies the path to the destination location.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="77422-124">-Excluir</span><span class="sxs-lookup"><span data-stu-id="77422-124">-Exclude</span></span>

<span data-ttu-id="77422-125">Especifica, como uma matriz de cadeia de caracteres, um item ou itens que esse cmdlet exclui.</span><span class="sxs-lookup"><span data-stu-id="77422-125">Specifies, as a string array, an item or items that this cmdlet excludes.</span></span>
<span data-ttu-id="77422-126">O valor deste parâmetro qualifica o parâmetro **Path** .</span><span class="sxs-lookup"><span data-stu-id="77422-126">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="77422-127">Insira um padrão ou elemento de caminho, como "\*.txt".</span><span class="sxs-lookup"><span data-stu-id="77422-127">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="77422-128">Caracteres curinga são permitidos.</span><span class="sxs-lookup"><span data-stu-id="77422-128">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="77422-129">-Filter</span><span class="sxs-lookup"><span data-stu-id="77422-129">-Filter</span></span>

<span data-ttu-id="77422-130">Especifica um filtro no formato ou idioma do provedor.</span><span class="sxs-lookup"><span data-stu-id="77422-130">Specifies a filter in the format or language of the provider.</span></span>
<span data-ttu-id="77422-131">O valor deste parâmetro qualifica o parâmetro **Path** .</span><span class="sxs-lookup"><span data-stu-id="77422-131">The value of this parameter qualifies the **Path** parameter.</span></span>

<span data-ttu-id="77422-132">A sintaxe do filtro, incluindo o uso de caracteres curinga, depende do provedor.</span><span class="sxs-lookup"><span data-stu-id="77422-132">The syntax of the filter, including the use of wildcard characters, depends on the provider.</span></span>
<span data-ttu-id="77422-133">Os filtros são mais eficientes do que outros parâmetros, porque o provedor os aplica quando o cmdlet obtém os objetos em vez de fazer com que o PowerShell filtre os objetos depois que eles são recuperados.</span><span class="sxs-lookup"><span data-stu-id="77422-133">Filters are more efficient than other parameters, because the provider applies them when the cmdlet gets the objects rather than having PowerShell filter the objects after they are retrieved.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="77422-134">-Force</span><span class="sxs-lookup"><span data-stu-id="77422-134">-Force</span></span>

<span data-ttu-id="77422-135">Força o comando a ser executado sem solicitar a confirmação do usuário.</span><span class="sxs-lookup"><span data-stu-id="77422-135">Forces the command to run without asking for user confirmation.</span></span>
<span data-ttu-id="77422-136">A implementação varia de provedor para provedor.</span><span class="sxs-lookup"><span data-stu-id="77422-136">Implementation varies from provider to provider.</span></span>
<span data-ttu-id="77422-137">Para obter mais informações, consulte [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span><span class="sxs-lookup"><span data-stu-id="77422-137">For more information, see [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="77422-138">-Incluir</span><span class="sxs-lookup"><span data-stu-id="77422-138">-Include</span></span>

<span data-ttu-id="77422-139">Especifica, como uma matriz de cadeia de caracteres, um item ou itens que esse cmdlet inclui na operação.</span><span class="sxs-lookup"><span data-stu-id="77422-139">Specifies, as a string array, an item or items that this cmdlet includes in the operation.</span></span>
<span data-ttu-id="77422-140">O valor deste parâmetro qualifica o parâmetro **Path** .</span><span class="sxs-lookup"><span data-stu-id="77422-140">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="77422-141">Insira um padrão ou elemento de caminho, como "\*.txt".</span><span class="sxs-lookup"><span data-stu-id="77422-141">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="77422-142">Caracteres curinga são permitidos.</span><span class="sxs-lookup"><span data-stu-id="77422-142">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="77422-143">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="77422-143">-LiteralPath</span></span>

<span data-ttu-id="77422-144">Especifica o caminho para o local atual da propriedade.</span><span class="sxs-lookup"><span data-stu-id="77422-144">Specifies the path to the current location of the property.</span></span>
<span data-ttu-id="77422-145">Ao contrário do parâmetro **Path** , o valor de **LiteralPath** é usado exatamente como digitado.</span><span class="sxs-lookup"><span data-stu-id="77422-145">Unlike the **Path** parameter, the value of **LiteralPath** is used exactly as it is typed.</span></span>
<span data-ttu-id="77422-146">Nenhum caractere é interpretado como caractere curinga.</span><span class="sxs-lookup"><span data-stu-id="77422-146">No characters are interpreted as wildcards.</span></span>
<span data-ttu-id="77422-147">Se o caminho incluir caracteres de escape, coloque-o entre aspas simples.</span><span class="sxs-lookup"><span data-stu-id="77422-147">If the path includes escape characters, enclose it in single quotation marks.</span></span>
<span data-ttu-id="77422-148">Aspas simples instruem o PowerShell a não interpretar nenhum caractere como sequências de escape.</span><span class="sxs-lookup"><span data-stu-id="77422-148">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: LiteralPath
Aliases: PSPath

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="77422-149">-Name</span><span class="sxs-lookup"><span data-stu-id="77422-149">-Name</span></span>

<span data-ttu-id="77422-150">Especifica o nome da propriedade a ser copiada.</span><span class="sxs-lookup"><span data-stu-id="77422-150">Specifies the name of the property to be copied.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases: PSProperty

Required: True
Position: 2
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="77422-151">-PassThru</span><span class="sxs-lookup"><span data-stu-id="77422-151">-PassThru</span></span>

<span data-ttu-id="77422-152">Retorna um objeto que representa o item com que você está trabalhando.</span><span class="sxs-lookup"><span data-stu-id="77422-152">Returns an object representing the item with which you are working.</span></span>
<span data-ttu-id="77422-153">Por padrão, este cmdlet não gera saída.</span><span class="sxs-lookup"><span data-stu-id="77422-153">By default, this cmdlet does not generate any output.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="77422-154">-Path</span><span class="sxs-lookup"><span data-stu-id="77422-154">-Path</span></span>

<span data-ttu-id="77422-155">Especifica, como uma matriz de cadeia de caracteres, o caminho para a propriedade a ser copiada.</span><span class="sxs-lookup"><span data-stu-id="77422-155">Specifies, as a string array, the path to the property to be copied.</span></span>

```yaml
Type: System.String[]
Parameter Sets: Path
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="77422-156">-UseTransaction</span><span class="sxs-lookup"><span data-stu-id="77422-156">-UseTransaction</span></span>
<span data-ttu-id="77422-157">Inclui o comando na transação ativa.</span><span class="sxs-lookup"><span data-stu-id="77422-157">Includes the command in the active transaction.</span></span>
<span data-ttu-id="77422-158">Este parâmetro é válido somente quando uma transação está em andamento.</span><span class="sxs-lookup"><span data-stu-id="77422-158">This parameter is valid only when a transaction is in progress.</span></span>
<span data-ttu-id="77422-159">Para obter mais informações, consulte about_Transactions.</span><span class="sxs-lookup"><span data-stu-id="77422-159">For more information, see about_Transactions.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: usetx

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="77422-160">-Confirm</span><span class="sxs-lookup"><span data-stu-id="77422-160">-Confirm</span></span>
<span data-ttu-id="77422-161">Solicita sua confirmação antes de executar o cmdlet.</span><span class="sxs-lookup"><span data-stu-id="77422-161">Prompts you for confirmation before running the cmdlet.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="77422-162">-WhatIf</span><span class="sxs-lookup"><span data-stu-id="77422-162">-WhatIf</span></span>

<span data-ttu-id="77422-163">Mostra o que aconteceria se o cmdlet fosse executado.</span><span class="sxs-lookup"><span data-stu-id="77422-163">Shows what would happen if the cmdlet runs.</span></span>
<span data-ttu-id="77422-164">O cmdlet não é executado.</span><span class="sxs-lookup"><span data-stu-id="77422-164">The cmdlet is not run.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="77422-165">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="77422-165">CommonParameters</span></span>

<span data-ttu-id="77422-166">Esse cmdlet oferece suporte aos parâmetros comuns:,,,,,, `-Debug` `-ErrorAction` `-ErrorVariable` `-InformationAction` `-InformationVariable` `-OutVariable` `-OutBuffer` , `-PipelineVariable` , `-Verbose` , `-WarningAction` e `-WarningVariable` .</span><span class="sxs-lookup"><span data-stu-id="77422-166">This cmdlet supports the common parameters: `-Debug`, `-ErrorAction`, `-ErrorVariable`, `-InformationAction`, `-InformationVariable`, `-OutVariable`, `-OutBuffer`, `-PipelineVariable`, `-Verbose`, `-WarningAction`, and `-WarningVariable`.</span></span> <span data-ttu-id="77422-167">Para obter mais informações, confira [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span><span class="sxs-lookup"><span data-stu-id="77422-167">For more information, see [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span></span>

## <span data-ttu-id="77422-168">ENTRADAS</span><span class="sxs-lookup"><span data-stu-id="77422-168">INPUTS</span></span>

### <span data-ttu-id="77422-169">System.String</span><span class="sxs-lookup"><span data-stu-id="77422-169">System.String</span></span>

<span data-ttu-id="77422-170">É possível canalizar uma cadeia de caracteres que contém um caminho para esse cmdlet.</span><span class="sxs-lookup"><span data-stu-id="77422-170">You can pipe a string that contains a path to this cmdlet.</span></span>

## <span data-ttu-id="77422-171">SAÍDAS</span><span class="sxs-lookup"><span data-stu-id="77422-171">OUTPUTS</span></span>

### <span data-ttu-id="77422-172">Nenhum ou System. Management. Automation. PSCustomObject</span><span class="sxs-lookup"><span data-stu-id="77422-172">None or System.Management.Automation.PSCustomObject</span></span>

<span data-ttu-id="77422-173">Quando você usa o parâmetro **PassThru** , esse cmdlet gera um **PSCustomObject** que representa a propriedade de item copiada.</span><span class="sxs-lookup"><span data-stu-id="77422-173">When you use the **Passthru** parameter, this cmdlet generates a **PsCustomObject** representing the copied item property.</span></span>
<span data-ttu-id="77422-174">Caso contrário, este cmdlet não gera nenhuma saída.</span><span class="sxs-lookup"><span data-stu-id="77422-174">Otherwise, this cmdlet does not generate any output.</span></span>

## <span data-ttu-id="77422-175">OBSERVAÇÕES</span><span class="sxs-lookup"><span data-stu-id="77422-175">NOTES</span></span>

<span data-ttu-id="77422-176">Esse cmdlet foi projetado para trabalhar com os dados expostos por qualquer provedor.</span><span class="sxs-lookup"><span data-stu-id="77422-176">This cmdlet is designed to work with the data exposed by any provider.</span></span> <span data-ttu-id="77422-177">Para listar os provedores disponíveis em sua sessão, digite `Get-PSProvider` .</span><span class="sxs-lookup"><span data-stu-id="77422-177">To list the providers available in your session, type `Get-PSProvider`.</span></span> <span data-ttu-id="77422-178">Para obter mais informações, consulte about_Providers.</span><span class="sxs-lookup"><span data-stu-id="77422-178">For more information, see about_Providers.</span></span>

## <span data-ttu-id="77422-179">LINKS RELACIONADOS</span><span class="sxs-lookup"><span data-stu-id="77422-179">RELATED LINKS</span></span>

[<span data-ttu-id="77422-180">Clear-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="77422-180">Clear-ItemProperty</span></span>](Clear-ItemProperty.md)

[<span data-ttu-id="77422-181">Get-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="77422-181">Get-ItemProperty</span></span>](Get-ItemProperty.md)

[<span data-ttu-id="77422-182">Move-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="77422-182">Move-ItemProperty</span></span>](Move-ItemProperty.md)

[<span data-ttu-id="77422-183">New-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="77422-183">New-ItemProperty</span></span>](New-ItemProperty.md)

[<span data-ttu-id="77422-184">Rename-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="77422-184">Rename-ItemProperty</span></span>](Rename-ItemProperty.md)

[<span data-ttu-id="77422-185">Set-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="77422-185">Set-ItemProperty</span></span>](Set-ItemProperty.md)

[<span data-ttu-id="77422-186">Get-PSProvider</span><span class="sxs-lookup"><span data-stu-id="77422-186">Get-PSProvider</span></span>](Get-PSProvider.md)
